Rework column masking and row filtering

--- a/tests/templates/kuttl/opa-authorization/11-opa-rego.yaml
+++ b/tests/templates/kuttl/opa-authorization/11-opa-rego.yaml
@@ -8,6 +8,7 @@ commands:
         --namespace=$NAMESPACE \
         --from-file=trino_rules/actual_permissions.rego \
         --from-file=trino_rules/requested_permissions.rego \
+        --from-file=trino_rules/util.rego \
         --from-file=trino_rules/verification.rego
       kubectl label configmaps trino-opa-rules \
         opa.stackable.tech/bundle=trino \
