Fix row filters in the documentation

--- a/docs/modules/trino/examples/usage-guide/opa-bundle-trino-cm-new.yaml
+++ b/docs/modules/trino/examples/usage-guide/opa-bundle-trino-cm-new.yaml
@@ -35,7 +35,7 @@ data:
     }
 
     # Filter rows according to an expression
-    rowFilters := row_filter if {
+    rowFilters := [row_filter] if {
       input.action.operation == "GetRowFilters"
 
       input.action.resource.table.catalogName == "default"
