Create Rego rules for OPA (#559)
* starting on rego tests

* fixes

* add to test definitions

* add sa for openshift

* fix tests

* enable opa decision logs

* linter

* linter #2

* simple test case working

* Add Rego rules and policies to the opa-authorization test

* Add the admin user and fix the reference to the policies

* Implement ExecuteQuery permissions

* Implement FilterCatalogs permissions

* Implement AccessCatalog permissions

* Implement ShowSchemas permissions

* Implement FilterSchemas permissions and fail on not implemented operations

* Add the list of unimplemented operations

* Implement ReadSystemInformation and WriteSystemInformation permissions

* Implement all table resource actions

* Split Rego rules into several files

* Implement table with properties actions

* Implement actions KillQueryOwnedBy and ViewQueryOwnedBy

* add bob user, test banned user, add query tables test

* Implement schema resource actions

* Implement SetSystemSessionProperty action

* Implement SetCatalogSessionProperty action

* refactor test script

* remove unused method

* Implement ImpersonateUser action

* add iceberg for testing

* fix tests

* Implement CreateSchema action

* Implement column operations on table like objects

* reduce hive replicas, fix test

* more tests

* Implement RenameSchema action

* create insert select drop table

* Implement rename table like object actions

* Implement SetSchemaAuthorization action

* test select from colummns

* Implement set authorization on table like object actions

* Implement function resource actions

* Implement execute table procedure action

* Implement remaining filter actions and fix the check of the column constraints

* Fix Rego linter warning

* Use a separate policy for procedures

* add iceberg user for insert delete tests

* Add default rules

* improve admin tests

* add admin tests

* more admin tests

* missing admin tests

* add user impersonation test

* filter query owned by test

* Ren

--- a/docs/modules/trino/examples/usage-guide/opa-bundle-trino-cm-new.yaml
+++ b/docs/modules/trino/examples/usage-guide/opa-bundle-trino-cm-new.yaml
@@ -17,12 +17,14 @@ data:
     allow if {
       is_admin
     }
+
     # Allow batched access
     batch contains i if {
       some i
       input.action.filterResources[i]
       is_admin
     }
+
     # Corner case: filtering columns is done with a single table item, and many columns inside
     batch contains i if {
       some i
@@ -30,6 +32,35 @@ data:
       count(input.action.filterResources) == 1
       input.action.filterResources[0].table.columns[i]
       is_admin
+    }
+
+    # Filter rows according to an expression
+    rowFilters contains row_filter if {
+      input.action.operation == "GetRowFilters"
+
+      input.action.resource.table.catalogName == "default"
+      input.action.resource.table.schemaName == "hr"
+      input.action.resource.table.tableName == "employee"
+
+      row_filter := {
+        "expression": "user = current_user",
+        "identity": "system_user",
+      }
+    }
+
+    # Mask columns according to an expression
+    columnMask := column_mask if {
+      input.action.operation == "GetColumnMask"
+
+      input.action.resource.column.catalogName == "default"
+      input.action.resource.column.schemaName == "default"
+      input.action.resource.column.tableName == "cards"
+      input.action.resource.column.columnName == "SSN"
+
+      column_mask := {
+        "expression": "'XXX-XX-' + substring(credit_card, -4)",
+        "identity": "system_user",
+      }
     }
 
     is_admin() if {
