--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,22 +12,22 @@ repository = "https://github.com/stackabletech/trino-operator"
 [workspace.dependencies]
 anyhow = "1.0"
 async-trait = "0.1"
-built = { version = "0.6", features = ["chrono", "git2"] }
-clap = "4.3"
+built = { version = "0.7", features = ["chrono", "git2"] }
+clap = "4.5"
 futures = { version = "0.3", features = ["compat"] }
 indoc = "2.0"
 openssl = "0.10"
 pin-project = "1.1"
-rstest = "0.18"
+rstest = "0.19"
 semver = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
-snafu = "0.7"
-stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.64.0" }
+snafu = "0.8"
+stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "stackable-operator-0.67.1" }
 product-config = { git = "https://github.com/stackabletech/product-config.git", tag = "0.6.0" }
-strum = { version = "0.25", features = ["derive"] }
-tokio = { version = "1.29", features = ["full"] }
+strum = { version = "0.26", features = ["derive"] }
+tokio = { version = "1.37", features = ["full"] }
 tracing = "0.1"
 
 # [patch."https://github.com/stackabletech/operator-rs.git"]
