--- a/examples/simple-trino-cluster-hive-ha-s3.yaml
+++ b/examples/simple-trino-cluster-hive-ha-s3.yaml
@@ -47,8 +47,7 @@ spec:
   clusterConfig:
     database:
       connString: jdbc:postgresql://hive-postgresql:5432/hive
-      user: hive
-      password: hive
+      credentialsSecret: postgres-credentials
       dbType: postgres
     s3:
       reference: minio
@@ -56,6 +55,15 @@ spec:
     roleGroups:
       default:
         replicas: 2
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: postgres-credentials
+type: Opaque
+stringData:
+  username: hive
+  password: hive
 ---
 apiVersion: s3.stackable.tech/v1alpha1
 kind: S3Connection
