feat: Add support for Trino 451 (#609)
* feat: Add support for Trino 451

* changelog

* fix: JVM config

* fix tests

* increase keycloak resources

* fix truncate test

* fix hive examples db user credentials

* fix linter

---------

Co-authored-by: Malte Sander <malte.sander.it@gmail.com>

--- a/examples/simple-trino-cluster.yaml
+++ b/examples/simple-trino-cluster.yaml
@@ -5,7 +5,7 @@ metadata:
   name: simple-trino
 spec:
   image:
-    productVersion: "442"
+    productVersion: "451"
   clusterConfig:
     catalogLabelSelector:
       matchLabels:
@@ -31,6 +31,15 @@ spec:
       metastore:
         configMap: simple-hive-derby
 ---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: hive-credentials
+type: Opaque
+stringData:
+  username: APP
+  password: mine
+---
 apiVersion: hive.stackable.tech/v1alpha1
 kind: HiveCluster
 metadata:
@@ -41,8 +50,7 @@ spec:
   clusterConfig:
     database:
       connString: jdbc:derby:;databaseName=/tmp/metastore_db;create=true
-      user: APP
-      password: mine
+      credentialsSecret: hive-credentials
       dbType: derby
   metastore:
     roleGroups:
