--- a/tests/test-definition.yaml
+++ b/tests/test-definition.yaml
@@ -22,6 +22,10 @@ dimensions:
   - name: hive
     values:
       - 3.1.3
+      - 4.0.0
+  - name: hive-latest
+    values:
+      - 4.0.0
   - name: opa
     values:
       - 0.66.0
@@ -98,7 +102,7 @@ tests:
   - name: opa-authorization
     dimensions:
       - trino-latest
-      - hive
+      - hive-latest
       - opa
       - keycloak
       - openshift
