WIP: Use new S3 structs from op-rs

--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -34,13 +34,10 @@ spec:
                       items:
                         properties:
                           authenticationClass:
-                            description: A name/key which references an authentication class. To get the concrete [`AuthenticationClass`], we must resolve it. This resolution can be achieved by using [`ClientAuthenticationDetails::resolve_class`].
+                            description: Name of the [AuthenticationClass](https://docs.stackable.tech/home/nightly/concepts/authentication) used to authenticate users.
                             type: string
                           oidc:
-                            description: |-
-                              This field contains authentication provider specific configuration.
-
-                              Use [`ClientAuthenticationDetails::oidc_or_error`] to get the value or report an error to the user.
+                            description: This field contains OIDC-specific configuration. It is only required in case OIDC is used.
                             nullable: true
                             properties:
                               clientCredentialsSecret:
@@ -205,10 +202,6 @@ spec:
                               nullable: true
                               type: object
                               x-kubernetes-preserve-unknown-fields: true
-                          required:
-                            - nodeAffinity
-                            - podAffinity
-                            - podAntiAffinity
                           type: object
                         gracefulShutdownTimeout:
                           description: Time period Pods have to gracefully shut down, e.g. `30m`, `1h` or `2d`. Consult the operator documentation for details.
@@ -478,10 +471,6 @@ spec:
                                     nullable: true
                                     type: object
                                     x-kubernetes-preserve-unknown-fields: true
-                                required:
-                                  - nodeAffinity
-                                  - podAffinity
-                                  - podAntiAffinity
                                 type: object
                               gracefulShutdownTimeout:
                                 description: Time period Pods have to gracefully shut down, e.g. `30m`, `1h` or `2d`. Consult the operator documentation for details.
@@ -778,10 +767,6 @@ spec:
                               nullable: true
                               type: object
                               x-kubernetes-preserve-unknown-fields: true
-                          required:
-                            - nodeAffinity
-                            - podAffinity
-                            - podAntiAffinity
                           type: object
                         gracefulShutdownTimeout:
                           description: Time period Pods have to gracefully shut down, e.g. `30m`, `1h` or `2d`. Consult the operator documentation for details.
@@ -1051,10 +1036,6 @@ spec:
                                     nullable: true
                                     type: object
                                     x-kubernetes-preserve-unknown-fields: true
-                                required:
-                                  - nodeAffinity
-                                  - podAffinity
-                                  - podAntiAffinity
                                 type: object
                               gracefulShutdownTimeout:
                                 description: Time period Pods have to gracefully shut down, e.g. `30m`, `1h` or `2d`. Consult the operator documentation for details.
@@ -1410,14 +1391,14 @@ spec:
                                 - reference
                           properties:
                             inline:
-                              description: Inline definition of an S3 connection.
+                              description: S3 connection definition as a resource. Learn more on the [S3 concept documentation](https://docs.stackable.tech/home/nightly/concepts/s3).
                               properties:
                                 accessStyle:
+                                  default: VirtualHosted
                                   description: Which access style to use. Defaults to virtual hosted-style as most of the data products out there. Have a look at the [AWS documentation](https://docs.aws.amazon.com/AmazonS3/latest/userguide/VirtualHosting.html).
                                   enum:
                                     - Path
                                     - VirtualHosted
-                                  nullable: true
                                   type: string
                                 credentials:
                                   description: If the S3 uses authentication you have to specify you S3 credentials. In the most cases a [SecretClass](https://docs.stackable.tech/home/nightly/secret-operator/secretclass) providing `accessKey` and `secretKey` is sufficient.
@@ -1427,6 +1408,12 @@ spec:
                                       description: '[Scope](https://docs.stackable.tech/home/nightly/secret-operator/scope) of the [SecretClass](https://docs.stackable.tech/home/nightly/secret-operator/secretclass).'
                                       nullable: true
                                       properties:
+                                        listenerVolumes:
+                                          default: []
+                                          description: The listener volume scope allows Node and Service scopes to be inferred from the applicable listeners. This must correspond to Volume names in the Pod that mount Listeners.
+                                          items:
+                                            type: string
+                                          type: array
                                         node:
                                           default: false
                                           description: The node scope is resolved to the name of the Kubernetes Node object that the Pod is running on. This will typically be the DNS name of the node.
@@ -1449,8 +1436,7 @@ spec:
                                     - secretClass
                                   type: object
                                 host:
-                                  description: 'Hostname of the S3 server without any protocol or port. For example: `west1.my-cloud.com`.'
-                                  nullable: true
+                                  description: 'Host of the S3 server without any protocol or port. For example: `west1.my-cloud.com`.'
                                   type: string
                                 port:
                                   description: Port the S3 server listens on. If not specified the product will determine the port to use.
@@ -1459,7 +1445,7 @@ spec:
                                   nullable: true
                                   type: integer
                                 tls:
-                                  description: If you want to use TLS when talking to S3 you can enable TLS encrypted communication with this setting.
+                                  description: Use a TLS connection. If not specified no TLS will be used.
                                   nullable: true
                                   properties:
                                     verification:
@@ -1498,9 +1484,10 @@ spec:
                                   required:
                                     - verification
                                   type: object
+                              required:
+                                - host
                               type: object
                             reference:
-                              description: A reference to an S3Connection resource.
                               type: string
                           type: object
                       required:
@@ -1619,14 +1606,14 @@ spec:
                                 - reference
                           properties:
                             inline:
-                              description: Inline definition of an S3 connection.
+                              description: S3 connection definition as a resource. Learn more on the [S3 concept documentation](https://docs.stackable.tech/home/nightly/concepts/s3).
                               properties:
                                 accessStyle:
+                                  default: VirtualHosted
                                   description: Which access style to use. Defaults to virtual hosted-style as most of the data products out there. Have a look at the [AWS documentation](https://docs.aws.amazon.com/AmazonS3/latest/userguide/VirtualHosting.html).
                                   enum:
                                     - Path
                                     - VirtualHosted
-                                  nullable: true
                                   type: string
                                 credentials:
                                   description: If the S3 uses authentication you have to specify you S3 credentials. In the most cases a [SecretClass](https://docs.stackable.tech/home/nightly/secret-operator/secretclass) providing `accessKey` and `secretKey` is sufficient.
@@ -1636,6 +1623,12 @@ spec:
                                       description: '[Scope](https://docs.stackable.tech/home/nightly/secret-operator/scope) of the [SecretClass](https://docs.stackable.tech/home/nightly/secret-operator/secretclass).'
                                       nullable: true
                                       properties:
+                                        listenerVolumes:
+                                          default: []
+                                          description: The listener volume scope allows Node and Service scopes to be inferred from the applicable listeners. This must correspond to Volume names in the Pod that mount Listeners.
+                                          items:
+                                            type: string
+                                          type: array
                                         node:
                                           default: false
                                           description: The node scope is resolved to the name of the Kubernetes Node object that the Pod is running on. This will typically be the DNS name of the node.
@@ -1658,8 +1651,7 @@ spec:
                                     - secretClass
                                   type: object
                                 host:
-                                  description: 'Hostname of the S3 server without any protocol or port. For example: `west1.my-cloud.com`.'
-                                  nullable: true
+                                  description: 'Host of the S3 server without any protocol or port. For example: `west1.my-cloud.com`.'
                                   type: string
                                 port:
                                   description: Port the S3 server listens on. If not specified the product will determine the port to use.
@@ -1668,7 +1660,7 @@ spec:
                                   nullable: true
                                   type: integer
                                 tls:
-                                  description: If you want to use TLS when talking to S3 you can enable TLS encrypted communication with this setting.
+                                  description: Use a TLS connection. If not specified no TLS will be used.
                                   nullable: true
                                   properties:
                                     verification:
@@ -1707,9 +1699,10 @@ spec:
                                   required:
                                     - verification
                                   type: object
+                              required:
+                                - host
                               type: object
                             reference:
-                              description: A reference to an S3Connection resource.
                               type: string
                           type: object
                       required:
@@ -1747,14 +1740,14 @@ spec:
                                 - reference
                           properties:
                             inline:
-                              description: Inline definition of an S3 connection.
+                              description: S3 connection definition as a resource. Learn more on the [S3 concept documentation](https://docs.stackable.tech/home/nightly/concepts/s3).
                               properties:
                                 accessStyle:
+                                  default: VirtualHosted
                                   description: Which access style to use. Defaults to virtual hosted-style as most of the data products out there. Have a look at the [AWS documentation](https://docs.aws.amazon.com/AmazonS3/latest/userguide/VirtualHosting.html).
                                   enum:
                                     - Path
                                     - VirtualHosted
-                                  nullable: true
                                   type: string
                                 credentials:
                                   description: If the S3 uses authentication you have to specify you S3 credentials. In the most cases a [SecretClass](https://docs.stackable.tech/home/nightly/secret-operator/secretclass) providing `accessKey` and `secretKey` is sufficient.
@@ -1764,6 +1757,12 @@ spec:
                                       description: '[Scope](https://docs.stackable.tech/home/nightly/secret-operator/scope) of the [SecretClass](https://docs.stackable.tech/home/nightly/secret-operator/secretclass).'
                                       nullable: true
                                       properties:
+                                        listenerVolumes:
+                                          default: []
+                                          description: The listener volume scope allows Node and Service scopes to be inferred from the applicable listeners. This must correspond to Volume names in the Pod that mount Listeners.
+                                          items:
+                                            type: string
+                                          type: array
                                         node:
                                           default: false
                                           description: The node scope is resolved to the name of the Kubernetes Node object that the Pod is running on. This will typically be the DNS name of the node.
@@ -1786,8 +1785,7 @@ spec:
                                     - secretClass
                                   type: object
                                 host:
-                                  description: 'Hostname of the S3 server without any protocol or port. For example: `west1.my-cloud.com`.'
-                                  nullable: true
+                                  description: 'Host of the S3 server without any protocol or port. For example: `west1.my-cloud.com`.'
                                   type: string
                                 port:
                                   description: Port the S3 server listens on. If not specified the product will determine the port to use.
@@ -1796,7 +1794,7 @@ spec:
                                   nullable: true
                                   type: integer
                                 tls:
-                                  description: If you want to use TLS when talking to S3 you can enable TLS encrypted communication with this setting.
+                                  description: Use a TLS connection. If not specified no TLS will be used.
                                   nullable: true
                                   properties:
                                     verification:
@@ -1835,9 +1833,10 @@ spec:
                                   required:
                                     - verification
                                   type: object
+                              required:
+                                - host
                               type: object
                             reference:
-                              description: A reference to an S3Connection resource.
                               type: string
                           type: object
                       required:
